tests/artifacts/perf/bd-wwqen.7-mt-mvcc-20260422T201044Z-cod4/mt_mvcc_bench.stderr
  [2m2026-04-22T20:10:44.552863Z[0m [32m INFO[0m [1;32mrch::hook[0m[32m: [32mSelected worker: ts2 at ubuntu@192.168.1.124 (28 slots, speed 50.0)[0m
    [2;3mat[0m rch/src/hook.rs:293 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:44.857455Z[0m [32m INFO[0m [1;32mrch::hook[0m[32m: [32mStarting remote compilation pipeline for frankensqlite (hash: 6a149c3320a27e17)[0m
    [2;3mat[0m rch/src/hook.rs:4664 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:44.857548Z[0m [32m INFO[0m [1;32mrch::hook[0m[32m: [32mPrepared dependency sync manifest for 28 roots[0m
    [2;3mat[0m rch/src/hook.rs:4686 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:45.468553Z[0m [32m INFO[0m [1;32mrch::hook[0m[32m: [32mSyncing project to worker ts2...[0m
    [2;3mat[0m rch/src/hook.rs:4710 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:45.468659Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mLoaded 1 pattern(s) from .rchignore (total: 51)[0m
    [2;3mat[0m rch/src/transfer.rs:575 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:45.468670Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite -> /data/projects/frankensqlite on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1032 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:46.011425Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 542ms[0m
    [2;3mat[0m rch/src/transfer.rs:1101 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:46.011487Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite/crates/fsqlite -> /data/projects/frankensqlite/crates/fsqlite on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1032 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:46.310980Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 299ms[0m
    [2;3mat[0m rch/src/transfer.rs:1101 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:46.311039Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite/crates/fsqlite-ast -> /data/projects/frankensqlite/crates/fsqlite-ast on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1032 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:46.603856Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 292ms[0m
    [2;3mat[0m rch/src/transfer.rs:1101 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:46.603969Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite/crates/fsqlite-btree -> /data/projects/frankensqlite/crates/fsqlite-btree on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1032 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:46.903794Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 299ms[0m
    [2;3mat[0m rch/src/transfer.rs:1101 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:46.903860Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite/crates/fsqlite-c-api -> /data/projects/frankensqlite/crates/fsqlite-c-api on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1032 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:47.200310Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 296ms[0m
    [2;3mat[0m rch/src/transfer.rs:1101 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:47.200384Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite/crates/fsqlite-cli -> /data/projects/frankensqlite/crates/fsqlite-cli on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1032 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:47.497592Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 297ms[0m
    [2;3mat[0m rch/src/transfer.rs:1101 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:47.497667Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite/crates/fsqlite-core -> /data/projects/frankensqlite/crates/fsqlite-core on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1032 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:47.791593Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 293ms[0m
    [2;3mat[0m rch/src/transfer.rs:1101 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:47.791693Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite/crates/fsqlite-e2e -> /data/projects/frankensqlite/crates/fsqlite-e2e on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1032 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:48.129331Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 337ms[0m
    [2;3mat[0m rch/src/transfer.rs:1101 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:48.129397Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite/crates/fsqlite-error -> /data/projects/frankensqlite/crates/fsqlite-error on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1032 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:48.424268Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 294ms[0m
    [2;3mat[0m rch/src/transfer.rs:1101 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:48.424337Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite/crates/fsqlite-ext-fts3 -> /data/projects/frankensqlite/crates/fsqlite-ext-fts3 on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1032 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:48.720598Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 296ms[0m
    [2;3mat[0m rch/src/transfer.rs:1101 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:48.720675Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite/crates/fsqlite-ext-fts5 -> /data/projects/frankensqlite/crates/fsqlite-ext-fts5 on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1032 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:49.026970Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 306ms[0m
    [2;3mat[0m rch/src/transfer.rs:1101 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:49.027034Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite/crates/fsqlite-ext-icu -> /data/projects/frankensqlite/crates/fsqlite-ext-icu on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1032 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:49.341093Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 314ms[0m
    [2;3mat[0m rch/src/transfer.rs:1101 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:49.341159Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite/crates/fsqlite-ext-json -> /data/projects/frankensqlite/crates/fsqlite-ext-json on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1032 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:49.642396Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 301ms[0m
    [2;3mat[0m rch/src/transfer.rs:1101 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:49.642469Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite/crates/fsqlite-ext-misc -> /data/projects/frankensqlite/crates/fsqlite-ext-misc on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1032 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:49.943951Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 301ms[0m
    [2;3mat[0m rch/src/transfer.rs:1101 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:49.944054Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite/crates/fsqlite-ext-rtree -> /data/projects/frankensqlite/crates/fsqlite-ext-rtree on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1032 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:50.236035Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 291ms[0m
    [2;3mat[0m rch/src/transfer.rs:1101 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:50.236100Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite/crates/fsqlite-ext-session -> /data/projects/frankensqlite/crates/fsqlite-ext-session on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1032 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:50.538690Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 302ms[0m
    [2;3mat[0m rch/src/transfer.rs:1101 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:50.538778Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite/crates/fsqlite-func -> /data/projects/frankensqlite/crates/fsqlite-func on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1032 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:50.843271Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 304ms[0m
    [2;3mat[0m rch/src/transfer.rs:1101 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:50.843337Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite/crates/fsqlite-harness -> /data/projects/frankensqlite/crates/fsqlite-harness on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1032 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:51.142009Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 298ms[0m
    [2;3mat[0m rch/src/transfer.rs:1101 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:51.142093Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite/crates/fsqlite-mvcc -> /data/projects/frankensqlite/crates/fsqlite-mvcc on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1032 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:51.445284Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 303ms[0m
    [2;3mat[0m rch/src/transfer.rs:1101 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:51.445342Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite/crates/fsqlite-observability -> /data/projects/frankensqlite/crates/fsqlite-observability on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1032 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:51.738557Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 293ms[0m
    [2;3mat[0m rch/src/transfer.rs:1101 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:51.738625Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite/crates/fsqlite-pager -> /data/projects/frankensqlite/crates/fsqlite-pager on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1032 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:52.044987Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 306ms[0m
    [2;3mat[0m rch/src/transfer.rs:1101 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:52.045076Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite/crates/fsqlite-parser -> /data/projects/frankensqlite/crates/fsqlite-parser on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1032 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:52.338210Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 293ms[0m
    [2;3mat[0m rch/src/transfer.rs:1101 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:52.338281Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite/crates/fsqlite-planner -> /data/projects/frankensqlite/crates/fsqlite-planner on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1032 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:52.639310Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 301ms[0m
    [2;3mat[0m rch/src/transfer.rs:1101 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:52.639385Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite/crates/fsqlite-types -> /data/projects/frankensqlite/crates/fsqlite-types on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1032 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:52.946785Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 307ms[0m
    [2;3mat[0m rch/src/transfer.rs:1101 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:52.946870Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite/crates/fsqlite-vdbe -> /data/projects/frankensqlite/crates/fsqlite-vdbe on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1032 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:53.249437Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 302ms[0m
    [2;3mat[0m rch/src/transfer.rs:1101 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:53.249511Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite/crates/fsqlite-vfs -> /data/projects/frankensqlite/crates/fsqlite-vfs on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1032 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:53.559132Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 309ms[0m
    [2;3mat[0m rch/src/transfer.rs:1101 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:53.559202Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite/crates/fsqlite-wal -> /data/projects/frankensqlite/crates/fsqlite-wal on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1032 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:53.863215Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 303ms[0m
    [2;3mat[0m rch/src/transfer.rs:1101 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:53.863280Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite/crates/fsqlite-wasm -> /data/projects/frankensqlite/crates/fsqlite-wasm on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1032 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:54.167037Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 303ms[0m
    [2;3mat[0m rch/src/transfer.rs:1101 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:54.167078Z[0m [32m INFO[0m [1;32mrch::hook[0m[32m: [32mSync complete: 17666 files, 600558 bytes in 8682ms[0m
    [2;3mat[0m rch/src/hook.rs:4867 [2;3mon[0m ThreadId(1)

  [2m2026-04-22T20:10:54.452178Z[0m [32m INFO[0m [1;32mrch::hook[0m[32m: [32mExecuting command remotely: env CARGO_TARGET_DIR=/home/ubuntu/rch_target_fsqlite_cod4 cargo run --profile release-perf -p fsqlite-e2e --bin mt-mvcc-bench -- --rows-per-thread=1000 --threads=1,8,16 --iters=10[0m
    [2;3mat[0m rch/src/hook.rs:4894 [2;3mon[0m ThreadId(1)

   Compiling cfg-if v1.0.4
   Compiling proc-macro2 v1.0.106
   Compiling quote v1.0.45
   Compiling unicode-ident v1.0.24
   Compiling libc v0.2.185
   Compiling serde_core v1.0.228
   Compiling typenum v1.20.0
   Compiling serde v1.0.228
   Compiling allocator-api2 v0.2.21
   Compiling once_cell v1.21.4
   Compiling autocfg v1.5.0
   Compiling foldhash v0.2.0
   Compiling equivalent v1.0.2
   Compiling version_check v0.9.5
   Compiling memchr v2.8.0
   Compiling shlex v1.3.0
   Compiling find-msvc-tools v0.1.9
   Compiling crossbeam-utils v0.8.21
   Compiling zmij v1.0.21
   Compiling cfg_aliases v0.2.1
   Compiling serde_json v1.0.149
   Compiling cmov v0.5.3
   Compiling smallvec v1.15.1
   Compiling rustix v1.1.4
   Compiling parking_lot_core v0.9.12
   Compiling regex-syntax v0.8.10
   Compiling const-oid v0.10.2
   Compiling itoa v1.0.18
   Compiling anyhow v1.0.102
   Compiling either v1.15.0
   Compiling scopeguard v1.2.0
   Compiling pin-project-lite v0.2.17
   Compiling thiserror v2.0.18
   Compiling getrandom v0.4.2
   Compiling linux-raw-sys v0.12.1
   Compiling cpufeatures v0.3.0
   Compiling virtue-next v0.1.3
   Compiling fastrand v2.4.1
   Compiling signal-hook v0.4.4
   Compiling io-uring v0.7.12
   Compiling crc32fast v1.5.0
   Compiling log v0.4.29
   Compiling lazy_static v1.5.0
   Compiling parking v2.2.1
   Compiling futures-io v0.3.32
   Compiling futures-core v0.3.32
   Compiling bytes v1.11.1
   Compiling unty-next v0.1.1
   Compiling nu-ansi-term v0.50.3
   Compiling arrayref v0.3.9
   Compiling base64 v0.22.1
   Compiling constant_time_eq v0.4.2
   Compiling slab v0.4.12
   Compiling arrayvec v0.7.6
   Compiling thread_local v1.1.9
   Compiling simdutf8 v0.1.5
   Compiling xxhash-rust v0.8.15
   Compiling zerocopy v0.8.48
   Compiling subtle v2.6.1
   Compiling iana-time-zone v0.1.65
   Compiling semver v1.0.28
   Compiling cpufeatures v0.2.17
   Compiling zeroize v1.8.2
   Compiling base64ct v1.8.3
   Compiling pollster v0.4.0
   Compiling opaque-debug v0.3.1
   Compiling bumpalo v3.20.2
   Compiling pkg-config v0.3.33
   Compiling ucd-trie v0.1.7
   Compiling vcpkg v0.2.15
   Compiling winnow v0.7.15
   Compiling toml_write v0.1.2
   Compiling fallible-streaming-iterator v0.1.9
   Compiling fallible-iterator v0.3.0
   Compiling nix v0.31.2
   Compiling nix v0.29.0
   Compiling cc v1.2.60
   Compiling tracing-core v0.1.36
   Compiling sharded-slab v0.1.7
   Compiling generic-array v0.14.7
   Compiling ahash v0.8.12
   Compiling num-traits v0.2.19
   Compiling memoffset v0.9.1
   Compiling ctutils v0.4.2
   Compiling hashbrown v0.17.0
   Compiling lock_api v0.4.14
   Compiling hashbrown v0.16.1
   Compiling itertools v0.14.0
   Compiling rustc_version v0.4.1
   Compiling aho-corasick v1.1.4
   Compiling futures-lite v2.6.1
   Compiling crc32c v0.6.8
   Compiling tracing-log v0.2.0
   Compiling hybrid-array v0.4.10
   Compiling bincode_derive-next v2.1.0
   Compiling crossbeam-epoch v0.9.18
   Compiling crossbeam-queue v0.3.12
   Compiling indexmap v2.14.0
   Compiling syn v2.0.117
   Compiling crossbeam-deque v0.8.6
   Compiling lru v0.16.4
   Compiling rmp v0.8.15
   Compiling chrono v0.4.44
   Compiling blake3 v1.8.4
   Compiling libsqlite3-sys v0.30.1
   Compiling block-buffer v0.12.0
   Compiling crypto-common v0.2.1
   Compiling block-buffer v0.10.4
   Compiling inout v0.1.4
   Compiling errno v0.3.14
   Compiling getrandom v0.2.17
   Compiling socket2 v0.6.3
   Compiling digest v0.11.2
   Compiling signal-hook-registry v1.4.8
   Compiling rand_core v0.6.4
   Compiling parking_lot v0.12.5
   Compiling hmac v0.13.0
   Compiling sha2 v0.11.0
   Compiling sha1 v0.11.0
   Compiling regex-automata v0.4.14
   Compiling crypto-common v0.1.7
   Compiling password-hash v0.5.0
   Compiling digest v0.10.7
   Compiling universal-hash v0.5.1
   Compiling cipher v0.4.4
   Compiling aead v0.5.2
   Compiling poly1305 v0.8.0
   Compiling chacha20 v0.9.1
   Compiling blake2 v0.10.6
   Compiling sha2 v0.10.9
   Compiling chacha20poly1305 v0.10.1
   Compiling bitflags v2.11.1
   Compiling argon2 v0.5.3
   Compiling ppv-lite86 v0.2.21
   Compiling serde_derive v1.0.228
   Compiling thiserror-impl v2.0.18
   Compiling tracing-attributes v0.1.31
   Compiling prost-derive v0.13.5
   Compiling pin-project-internal v1.1.11
   Compiling asupersync-macros v0.3.1
   Compiling visibility v0.1.1
   Compiling rand_chacha v0.3.1
   Compiling rand v0.8.6
   Compiling pin-project v1.1.11
   Compiling tracing v0.1.44
   Compiling fsqlite-error v0.1.2 (/data/projects/frankensqlite/crates/fsqlite-error)
   Compiling matchers v0.2.0
   Compiling regex v1.12.3
   Compiling prost v0.13.5
   Compiling tempfile v3.27.0
   Compiling polling v3.11.0
   Compiling tracing-serde v0.2.0
   Compiling franken-evidence v0.3.1
   Compiling franken-kernel v0.3.1
   Compiling rmp-serde v1.3.1
   Compiling hashbrown v0.14.5
   Compiling json5 v1.3.1
   Compiling serde_spanned v0.6.9
   Compiling toml_datetime v0.6.11
   Compiling bincode-next v2.1.0
   Compiling tracing-subscriber v0.3.23
   Compiling toml_edit v0.22.27
   Compiling franken-decision v0.3.1
   Compiling dashmap v6.1.0
   Compiling hashlink v0.9.1
   Compiling asupersync v0.3.1
   Compiling toml v0.8.23
   Compiling rusqlite v0.32.1
   Compiling fsqlite-types v0.1.2 (/data/projects/frankensqlite/crates/fsqlite-types)
   Compiling fsqlite-func v0.1.2 (/data/projects/frankensqlite/crates/fsqlite-func)
   Compiling fsqlite-observability v0.1.2 (/data/projects/frankensqlite/crates/fsqlite-observability)
   Compiling fsqlite-ast v0.1.2 (/data/projects/frankensqlite/crates/fsqlite-ast)
   Compiling fsqlite-vfs v0.1.3 (/data/projects/frankensqlite/crates/fsqlite-vfs)
   Compiling fsqlite-parser v0.1.2 (/data/projects/frankensqlite/crates/fsqlite-parser)
   Compiling fsqlite-ext-rtree v0.1.2 (/data/projects/frankensqlite/crates/fsqlite-ext-rtree)
   Compiling fsqlite-ext-fts5 v0.1.2 (/data/projects/frankensqlite/crates/fsqlite-ext-fts5)
   Compiling fsqlite-ext-icu v0.1.2 (/data/projects/frankensqlite/crates/fsqlite-ext-icu)
   Compiling fsqlite-ext-misc v0.1.2 (/data/projects/frankensqlite/crates/fsqlite-ext-misc)
   Compiling fsqlite-ext-json v0.1.2 (/data/projects/frankensqlite/crates/fsqlite-ext-json)
   Compiling fsqlite-wal v0.1.2 (/data/projects/frankensqlite/crates/fsqlite-wal)
   Compiling fsqlite-planner v0.1.2 (/data/projects/frankensqlite/crates/fsqlite-planner)
   Compiling fsqlite-pager v0.1.2 (/data/projects/frankensqlite/crates/fsqlite-pager)
   Compiling fsqlite-btree v0.1.2 (/data/projects/frankensqlite/crates/fsqlite-btree)
   Compiling fsqlite-mvcc v0.1.2 (/data/projects/frankensqlite/crates/fsqlite-mvcc)
   Compiling fsqlite-vdbe v0.1.2 (/data/projects/frankensqlite/crates/fsqlite-vdbe)
   Compiling fsqlite-core v0.1.2 (/data/projects/frankensqlite/crates/fsqlite-core)
error[E0599]: no method named `execute_writable_schema_insert` found for reference `&connection::Connection` in the current scope
     --> crates/fsqlite-core/src/connection.rs:16551:41
      |
16551 |                     let affected = self.execute_writable_schema_insert(insert, params)?;
      |                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
      |
help: there is a method `execute_with_ctes` with a similar name
      |
16551 -                     let affected = self.execute_writable_schema_insert(insert, params)?;
16551 +                     let affected = self.execute_with_ctes(insert, params)?;
      |

error[E0599]: no method named `execute_writable_schema_update` found for reference `&connection::Connection` in the current scope
     --> crates/fsqlite-core/src/connection.rs:16818:41
      |
16818 |                     let affected = self.execute_writable_schema_update(update, params)?;
      |                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
      |
help: there is a method `execute_with_ctes` with a similar name
      |
16818 -                     let affected = self.execute_writable_schema_update(update, params)?;
16818 +                     let affected = self.execute_with_ctes(update, params)?;
      |

error[E0061]: this function takes 4 arguments but 3 arguments were supplied
     --> crates/fsqlite-core/src/connection.rs:36295:29
      |
36295 | ...                   eval_group_agg_join_expr(effective, &refs, &col_map)?
      |                       ^^^^^^^^^^^^^^^^^^^^^^^^---------------------------- argument #4 of type `std::option::Option<(&[fsqlite_vdbe::codegen::TableSchema], &std::sync::Mutex<CollationRegistry>)>` is missing
      |
note: function defined here
     --> crates/fsqlite-core/src/connection.rs:51918:4
      |
51918 | fn eval_group_agg_join_expr(
      |    ^^^^^^^^^^^^^^^^^^^^^^^^
...
51922 |     agg_collation_ctx: Option<(&[TableSchema], &Mutex<CollationRegistry>)>,
      |     ----------------------------------------------------------------------
help: provide the argument
      |
36295 |                             eval_group_agg_join_expr(effective, &refs, &col_map, /* std::option::Option<(&[fsqlite_vdbe::codegen::TableSchema], &std::sync::Mutex<CollationRegistry>)> */)?
      |                                                                                ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

error[E0061]: this function takes 4 arguments but 3 arguments were supplied
     --> crates/fsqlite-core/src/connection.rs:36613:41
      |
36613 | ...                   eval_group_agg_join_expr(expr, &refs, &col_map)
      |                       ^^^^^^^^^^^^^^^^^^^^^^^^----------------------- argument #4 of type `std::option::Option<(&[fsqlite_vdbe::codegen::TableSchema], &std::sync::Mutex<CollationRegistry>)>` is missing
      |
note: function defined here
     --> crates/fsqlite-core/src/connection.rs:51918:4
      |
51918 | fn eval_group_agg_join_expr(
      |    ^^^^^^^^^^^^^^^^^^^^^^^^
...
51922 |     agg_collation_ctx: Option<(&[TableSchema], &Mutex<CollationRegistry>)>,
      |     ----------------------------------------------------------------------
help: provide the argument
      |
36613 |                                         eval_group_agg_join_expr(expr, &refs, &col_map, /* std::option::Option<(&[fsqlite_vdbe::codegen::TableSchema], &std::sync::Mutex<CollationRegistry>)> */)
      |                                                                                       ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

error[E0061]: this function takes 4 arguments but 3 arguments were supplied
     --> crates/fsqlite-core/src/connection.rs:36662:29
      |
36662 | ...                   eval_group_agg_join_expr(effective, &refs, &col_map)?
      |                       ^^^^^^^^^^^^^^^^^^^^^^^^---------------------------- argument #4 of type `std::option::Option<(&[fsqlite_vdbe::codegen::TableSchema], &std::sync::Mutex<CollationRegistry>)>` is missing
      |
note: function defined here
     --> crates/fsqlite-core/src/connection.rs:51918:4
      |
51918 | fn eval_group_agg_join_expr(
      |    ^^^^^^^^^^^^^^^^^^^^^^^^
...
51922 |     agg_collation_ctx: Option<(&[TableSchema], &Mutex<CollationRegistry>)>,
      |     ----------------------------------------------------------------------
help: provide the argument
      |
36662 |                             eval_group_agg_join_expr(effective, &refs, &col_map, /* std::option::Option<(&[fsqlite_vdbe::codegen::TableSchema], &std::sync::Mutex<CollationRegistry>)> */)?
      |                                                                                ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

error[E0061]: this function takes 4 arguments but 3 arguments were supplied
     --> crates/fsqlite-core/src/connection.rs:38294:29
      |
38294 | ...                   eval_group_agg_join_expr(effective, &refs, &col_map)?
      |                       ^^^^^^^^^^^^^^^^^^^^^^^^---------------------------- argument #4 of type `std::option::Option<(&[fsqlite_vdbe::codegen::TableSchema], &std::sync::Mutex<CollationRegistry>)>` is missing
      |
note: function defined here
     --> crates/fsqlite-core/src/connection.rs:51918:4
      |
51918 | fn eval_group_agg_join_expr(
      |    ^^^^^^^^^^^^^^^^^^^^^^^^
...
51922 |     agg_collation_ctx: Option<(&[TableSchema], &Mutex<CollationRegistry>)>,
      |     ----------------------------------------------------------------------
help: provide the argument
      |
38294 |                             eval_group_agg_join_expr(effective, &refs, &col_map, /* std::option::Option<(&[fsqlite_vdbe::codegen::TableSchema], &std::sync::Mutex<CollationRegistry>)> */)?
      |                                                                                ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

error[E0061]: this function takes 4 arguments but 3 arguments were supplied
     --> crates/fsqlite-core/src/connection.rs:38546:41
      |
38546 | ...                   eval_group_agg_join_expr(expr, &refs, &col_map)
      |                       ^^^^^^^^^^^^^^^^^^^^^^^^----------------------- argument #4 of type `std::option::Option<(&[fsqlite_vdbe::codegen::TableSchema], &std::sync::Mutex<CollationRegistry>)>` is missing
      |
note: function defined here
     --> crates/fsqlite-core/src/connection.rs:51918:4
      |
51918 | fn eval_group_agg_join_expr(
      |    ^^^^^^^^^^^^^^^^^^^^^^^^
...
51922 |     agg_collation_ctx: Option<(&[TableSchema], &Mutex<CollationRegistry>)>,
      |     ----------------------------------------------------------------------
help: provide the argument
      |
38546 |                                         eval_group_agg_join_expr(expr, &refs, &col_map, /* std::option::Option<(&[fsqlite_vdbe::codegen::TableSchema], &std::sync::Mutex<CollationRegistry>)> */)
      |                                                                                       ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

error[E0061]: this function takes 4 arguments but 3 arguments were supplied
     --> crates/fsqlite-core/src/connection.rs:38594:29
      |
38594 | ...                   eval_group_agg_join_expr(effective, &refs, &col_map)?
      |                       ^^^^^^^^^^^^^^^^^^^^^^^^---------------------------- argument #4 of type `std::option::Option<(&[fsqlite_vdbe::codegen::TableSchema], &std::sync::Mutex<CollationRegistry>)>` is missing
      |
note: function defined here
     --> crates/fsqlite-core/src/connection.rs:51918:4
      |
51918 | fn eval_group_agg_join_expr(
      |    ^^^^^^^^^^^^^^^^^^^^^^^^
...
51922 |     agg_collation_ctx: Option<(&[TableSchema], &Mutex<CollationRegistry>)>,
      |     ----------------------------------------------------------------------
help: provide the argument
      |
38594 |                             eval_group_agg_join_expr(effective, &refs, &col_map, /* std::option::Option<(&[fsqlite_vdbe::codegen::TableSchema], &std::sync::Mutex<CollationRegistry>)> */)?
      |                                                                                ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

error[E0061]: this function takes 4 arguments but 3 arguments were supplied
     --> crates/fsqlite-core/src/connection.rs:52062:23
      |
52062 |             let val = eval_group_agg_join_expr(expr, group_rows, col_map)?;
      |                       ^^^^^^^^^^^^^^^^^^^^^^^^--------------------------- argument #4 of type `std::option::Option<(&[fsqlite_vdbe::codegen::TableSchema], &std::sync::Mutex<CollationRegistry>)>` is missing
      |
note: function defined here
     --> crates/fsqlite-core/src/connection.rs:51918:4
      |
51918 | fn eval_group_agg_join_expr(
      |    ^^^^^^^^^^^^^^^^^^^^^^^^
...
51922 |     agg_collation_ctx: Option<(&[TableSchema], &Mutex<CollationRegistry>)>,
      |     ----------------------------------------------------------------------
help: provide the argument
      |
52062 |             let val = eval_group_agg_join_expr(expr, group_rows, col_map, /* std::option::Option<(&[fsqlite_vdbe::codegen::TableSchema], &std::sync::Mutex<CollationRegistry>)> */)?;
      |                                                                         ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

error[E0061]: this function takes 4 arguments but 3 arguments were supplied
     --> crates/fsqlite-core/src/connection.rs:52071:23
      |
52071 |             let val = eval_group_agg_join_expr(expr, group_rows, col_map)?;
      |                       ^^^^^^^^^^^^^^^^^^^^^^^^--------------------------- argument #4 of type `std::option::Option<(&[fsqlite_vdbe::codegen::TableSchema], &std::sync::Mutex<CollationRegistry>)>` is missing
      |
note: function defined here
     --> crates/fsqlite-core/src/connection.rs:51918:4
      |
51918 | fn eval_group_agg_join_expr(
      |    ^^^^^^^^^^^^^^^^^^^^^^^^
...
51922 |     agg_collation_ctx: Option<(&[TableSchema], &Mutex<CollationRegistry>)>,
      |     ----------------------------------------------------------------------
help: provide the argument
      |
52071 |             let val = eval_group_agg_join_expr(expr, group_rows, col_map, /* std::option::Option<(&[fsqlite_vdbe::codegen::TableSchema], &std::sync::Mutex<CollationRegistry>)> */)?;
      |                                                                         ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

error[E0061]: this function takes 4 arguments but 3 arguments were supplied
     --> crates/fsqlite-core/src/connection.rs:52103:23
      |
52103 |             let val = eval_group_agg_join_expr(expr, group_rows, col_map)?;
      |                       ^^^^^^^^^^^^^^^^^^^^^^^^--------------------------- argument #4 of type `std::option::Option<(&[fsqlite_vdbe::codegen::TableSchema], &std::sync::Mutex<CollationRegistry>)>` is missing
      |
note: function defined here
     --> crates/fsqlite-core/src/connection.rs:51918:4
      |
51918 | fn eval_group_agg_join_expr(
      |    ^^^^^^^^^^^^^^^^^^^^^^^^
...
51922 |     agg_collation_ctx: Option<(&[TableSchema], &Mutex<CollationRegistry>)>,
      |     ----------------------------------------------------------------------
help: provide the argument
      |
52103 |             let val = eval_group_agg_join_expr(expr, group_rows, col_map, /* std::option::Option<(&[fsqlite_vdbe::codegen::TableSchema], &std::sync::Mutex<CollationRegistry>)> */)?;
      |                                                                         ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

error[E0061]: this function takes 4 arguments but 3 arguments were supplied
     --> crates/fsqlite-core/src/connection.rs:52140:23
      |
52140 |             let val = eval_group_agg_join_expr(expr, group_rows, col_map)?;
      |                       ^^^^^^^^^^^^^^^^^^^^^^^^--------------------------- argument #4 of type `std::option::Option<(&[fsqlite_vdbe::codegen::TableSchema], &std::sync::Mutex<CollationRegistry>)>` is missing
      |
note: function defined here
     --> crates/fsqlite-core/src/connection.rs:51918:4
      |
51918 | fn eval_group_agg_join_expr(
      |    ^^^^^^^^^^^^^^^^^^^^^^^^
...
51922 |     agg_collation_ctx: Option<(&[TableSchema], &Mutex<CollationRegistry>)>,
      |     ----------------------------------------------------------------------
help: provide the argument
      |
52140 |             let val = eval_group_agg_join_expr(expr, group_rows, col_map, /* std::option::Option<(&[fsqlite_vdbe::codegen::TableSchema], &std::sync::Mutex<CollationRegistry>)> */)?;
      |                                                                         ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

error[E0061]: this function takes 4 arguments but 3 arguments were supplied
     --> crates/fsqlite-core/src/connection.rs:52141:22
      |
52141 |             let lo = eval_group_agg_join_expr(low, group_rows, col_map)?;
      |                      ^^^^^^^^^^^^^^^^^^^^^^^^-------------------------- argument #4 of type `std::option::Option<(&[fsqlite_vdbe::codegen::TableSchema], &std::sync::Mutex<CollationRegistry>)>` is missing
      |
note: function defined here
     --> crates/fsqlite-core/src/connection.rs:51918:4
      |
51918 | fn eval_group_agg_join_expr(
      |    ^^^^^^^^^^^^^^^^^^^^^^^^
...
51922 |     agg_collation_ctx: Option<(&[TableSchema], &Mutex<CollationRegistry>)>,
      |     ----------------------------------------------------------------------
help: provide the argument
      |
52141 |             let lo = eval_group_agg_join_expr(low, group_rows, col_map, /* std::option::Option<(&[fsqlite_vdbe::codegen::TableSchema], &std::sync::Mutex<CollationRegistry>)> */)?;
      |                                                                       ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

error[E0061]: this function takes 4 arguments but 3 arguments were supplied
     --> crates/fsqlite-core/src/connection.rs:52142:22
      |
52142 |             let hi = eval_group_agg_join_expr(high, group_rows, col_map)?;
      |                      ^^^^^^^^^^^^^^^^^^^^^^^^--------------------------- argument #4 of type `std::option::Option<(&[fsqlite_vdbe::codegen::TableSchema], &std::sync::Mutex<CollationRegistry>)>` is missing
      |
note: function defined here
     --> crates/fsqlite-core/src/connection.rs:51918:4
      |
51918 | fn eval_group_agg_join_expr(
      |    ^^^^^^^^^^^^^^^^^^^^^^^^
...
51922 |     agg_collation_ctx: Option<(&[TableSchema], &Mutex<CollationRegistry>)>,
      |     ----------------------------------------------------------------------
help: provide the argument
      |
52142 |             let hi = eval_group_agg_join_expr(high, group_rows, col_map, /* std::option::Option<(&[fsqlite_vdbe::codegen::TableSchema], &std::sync::Mutex<CollationRegistry>)> */)?;
      |                                                                        ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

error[E0061]: this function takes 4 arguments but 3 arguments were supplied
     --> crates/fsqlite-core/src/connection.rs:52179:23
      |
52179 |             let val = eval_group_agg_join_expr(inner, group_rows, col_map)?;
      |                       ^^^^^^^^^^^^^^^^^^^^^^^^---------------------------- argument #4 of type `std::option::Option<(&[fsqlite_vdbe::codegen::TableSchema], &std::sync::Mutex<CollationRegistry>)>` is missing
      |
note: function defined here
     --> crates/fsqlite-core/src/connection.rs:51918:4
      |
51918 | fn eval_group_agg_join_expr(
      |    ^^^^^^^^^^^^^^^^^^^^^^^^
...
51922 |     agg_collation_ctx: Option<(&[TableSchema], &Mutex<CollationRegistry>)>,
      |     ----------------------------------------------------------------------
help: provide the argument
      |
52179 |             let val = eval_group_agg_join_expr(inner, group_rows, col_map, /* std::option::Option<(&[fsqlite_vdbe::codegen::TableSchema], &std::sync::Mutex<CollationRegistry>)> */)?;
      |                                                                          ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

error[E0061]: this function takes 4 arguments but 3 arguments were supplied
     --> crates/fsqlite-core/src/connection.rs:52185:46
      |
52185 |         Expr::Collate { expr: inner, .. } => eval_group_agg_join_expr(inner, group_rows, col_map),
      |                                              ^^^^^^^^^^^^^^^^^^^^^^^^---------------------------- argument #4 of type `std::option::Option<(&[fsqlite_vdbe::codegen::TableSchema], &std::sync::Mutex<CollationRegistry>)>` is missing
      |
note: function defined here
     --> crates/fsqlite-core/src/connection.rs:51918:4
      |
51918 | fn eval_group_agg_join_expr(
      |    ^^^^^^^^^^^^^^^^^^^^^^^^
...
51922 |     agg_collation_ctx: Option<(&[TableSchema], &Mutex<CollationRegistry>)>,
      |     ----------------------------------------------------------------------
help: provide the argument
      |
52185 |         Expr::Collate { expr: inner, .. } => eval_group_agg_join_expr(inner, group_rows, col_map, /* std::option::Option<(&[fsqlite_vdbe::codegen::TableSchema], &std::sync::Mutex<CollationRegistry>)> */),
      |                                                                                                 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

Some errors have detailed explanations: E0061, E0599.
For more information about an error, try `rustc --explain E0061`.
error: could not compile `fsqlite-core` (lib) due to 16 previous errors
warning: build failed, waiting for other jobs to finish...
  [2m2026-04-22T20:12:43.664793Z[0m [32m INFO[0m [1;32mrch::hook[0m[32m: [32mRemote command finished: exit=101 in 109212ms[0m
    [2;3mat[0m rch/src/hook.rs:5015 [2;3mon[0m ThreadId(1)

[RCH] remote ts2 failed (exit 101)
